syntax = "proto3";
//option go_package = "path;name";
//path 表示生成的go文件的存放地址，会自动生成目录的。
//name 表示生成的go文件所属的包名
option go_package="./;proto";

package proto;

// 定义HelloRequest消息
message ImageReq {
  // name字段
  string name = 1;
}

// 定义HelloReply消息
message ImageRequestResp {
  // message字段
  string message = 1;
}

//定义服务
// 定义Greeter服务
service Greeter {
  // 定义SayHello方法，接受HelloRequest消息， 并返回HelloReply消息
  rpc SayHello (ImageReq) returns (ImageRequestResp) {}
}
